--- a/config.org
+++ b/config.org
@@ -608,7 +608,8 @@ At the moment it is simple but I have bigger plans
   "An image to use at minimum size, usually a transparent pixel")
 
 (setq fancy-splash-sizes
-      `((:height 500 :min-height 50 :padding (0 . 2) :template ,(expand-file-name "misc/splash-images/blackhole-lines-0.svg" doom-private-dir))
+      `((:height 700 :min-height 70 :padding (0 . 2) :template ,(expand-file-name "misc/splash-images/blackhole-lines-0.svg" doom-private-dir))
+        (:height 500 :min-height 50 :padding (1 . 2) :template ,(expand-file-name "misc/splash-images/blackhole-lines-0.svg" doom-private-dir))
         (:height 440 :min-height 42 :padding (1 . 4) :template ,(expand-file-name "misc/splash-images/blackhole-lines-0.svg" doom-private-dir))
         (:height 400 :min-height 38 :padding (1 . 4) :template ,(expand-file-name "misc/splash-images/blackhole-lines-1.svg" doom-private-dir))
         (:height 350 :min-height 36 :padding (1 . 3) :template ,(expand-file-name "misc/splash-images/blackhole-lines-2.svg" doom-private-dir))
@@ -616,13 +617,13 @@ At the moment it is simple but I have bigger plans
         (:height 250 :min-height 32 :padding (1 . 2) :template ,(expand-file-name "misc/splash-images/blackhole-lines-4.svg" doom-private-dir))
         (:height 200 :min-height 30 :padding (1 . 2) :template ,(expand-file-name "misc/splash-images/blackhole-lines-5.svg" doom-private-dir))
         (:height 100 :min-height 24 :padding (1 . 2) :template ,(expand-file-name "misc/splash-images/emacs-e-template.svg" doom-private-dir))
-        (:height 0   :min-height 0  :padding (0 . 0) :file ,fancy-splash-image-nil))
-        "list of plists with the following properties
-        :height the height of the image
-        :min-height minimum `frame-height' for image
-        :padding `+doom-dashboard-banner-padding' to apply
-        :template non-default template file
-        :file file to use instead of template")
+        (:height 0   :min-height 0  :padding (0 . 0) :file ,fancy-splash-image-nil)))
+        ;; "list of plists with the following properties
+        ;; :height the height of the image
+        ;; :min-height minimum `frame-height' for image
+        ;; :padding `+doom-dashboard-banner-padding' to apply
+        ;; :template non-default template file
+        ;; :file file to use instead of template")
 
 (defvar fancy-splash-template-colours
   '(("$colour1" . keywords) ("$colour2" . type) ("$colour3" . warning) ("$colour4" . base8))
@@ -1812,9 +1813,6 @@ WantedBy=suspend.target
 *** Indexing
 *** Sending
 *** Mu4e
-:PROPERTIES:
-:header-args:emacs-lisp: :tangle no :noweb-ref mu4e-conf
-:END:
 
 This is here because of some weird ass property drawer errors
 #+begin_src emacs-lisp :noweb no-export (if (executable-find "mu") ":tangle yes") :noweb-ref nil
