--- a/config.org
+++ b/config.org
@@ -356,6 +356,7 @@ markdown          ; writing docs for people to ignore
 +pretty
 +pandoc
 +present
++roam2
 +jupyter)                                ; organize your plain life in plain text
 ;;php               ; perl's insecure younger brother
 ;;plantuml          ; diagrams for confusing people more
