--- a/config.org
+++ b/config.org
@@ -298,25 +298,26 @@ despite the name herein lies some of the things that make emacs worth using.
 
 #+name: doom-tools
 #+begin_src emacs-lisp
-;;ansible
-(debugger +lsp)          ; FIXME stepping through code, to help you add bugs
+ansible
+;;biblio            ; Writes a PhD for you (citation needed)
+(debugger +lsp)         ; FIXME stepping through code, to help you add bugs
 ;;direnv
-docker
+;;docker
 editorconfig      ; let someone else argue about tabs vs spaces
 ;;ein               ; tame Jupyter notebooks with emacs
 (eval +overlay)     ; run code, run (also, repls)
 ;;gist              ; interacting with github gists
 lookup              ; navigate your code and its documentation
 lsp               ; M-x vscode
-(magit +forge)    ; a git porcelain for Emacs
+(magit +forge)             ; a git porcelain for Emacs
 make              ; run make tasks from Emacs
 ;;pass              ; password manager for nerds
 pdf               ; pdf enhancements
 ;;prodigy           ; FIXME managing external services & code builders
 rgb               ; creating color strings
-taskrunner        ; taskrunner for all your projects
+;;taskrunner        ; taskrunner for all your projects
 ;;terraform         ; infrastructure as code
-tmux              ; an API for interacting with tmux
+;;tmux              ; an API for interacting with tmux
 tree-sitter       ; syntax and parsing, sitting in a tree...
 upload            ; map local to remote projects via ssh/ftp
 #+end_src
@@ -333,52 +334,58 @@ tty               ; improve the terminal Emacs experience
 #+begin_src emacs-lisp
 ;;agda              ; types of types of types of types...
 ;;beancount         ; mind the GAAP
-(cc +lsp)                ; C > C++ == 1
-clojure           ; java with a lisp
+(cc +lsp)           ; C > C++ == 1
+;;clojure           ; java with a lisp
 ;;common-lisp       ; if you've seen one lisp, you've seen them all
 ;;coq               ; proofs-as-programs
 ;;crystal           ; ruby at the speed of c
 ;;csharp            ; unity, .NET, and mono shenanigans
-data              ; config/data formats
+;;data              ; config/data formats
 ;;(dart +flutter)   ; paint ui and not much else
+;;dhall
 ;;elixir            ; erlang done right
 ;;elm               ; care for a cup of TEA?
-emacs-lisp        ; drown in parentheses
+emacs-lisp          ; drown in parentheses
 ;;erlang            ; an elegant language for a more civilized age
 ;;ess               ; emacs speaks statistics
 ;;factor
 ;;faust             ; dsp, but you get to keep your soul
+fortran             ; in FORTRAN, GOD is REAL (unless declared INTEGER)
 ;;fsharp            ; ML stands for Microsoft's Language
 ;;fstar             ; (dependent) types and (monadic) effects and Z3
 ;;gdscript          ; the language you waited for
-;;(graphql +lsp) ; Give queries a REST
 ;;(go +lsp)         ; the hipster dialect
-;;(haskell +dante)  ; a language that's lazier than I am
+;;(graphql +lsp)    ; Give queries a REST
+;;(haskell +lsp)    ; a language that's lazier than I am
 ;;hy                ; readability of scheme w/ speed of python
 ;;idris             ; a language you can depend on
-json              ; At least it ain't XML
-(java +lsp) ; the poster child for carpal tunnel syndrome
-(javascript +lsp)        ; all(hope(abandon(ye(who(enter(here))))))
-;;(julia +lsp)             ; a better, faster MATLAB
+json                ; At least it ain't XML
+(java +lsp)         ; the poster child for carpal tunnel syndrome
+(javascript +lsp)   ; all(hope(abandon(ye(who(enter(here))))))
+(julia +lsp)        ; a better, faster MATLAB
 ;;kotlin            ; a better, slicker Java(Script)
-;;latex             ; writing papers in Emacs has never been so fun
+latex               ; writing papers in Emacs has never been so fun
 ;;lean              ; for folks with too much to prove
 ;;ledger            ; be audit you can be
 ;;lua               ; one-based indices? one-based indices
-markdown          ; writing docs for people to ignore
+(markdown +grip)    ; writing docs for people to ignore
 ;;nim               ; python + lisp at the speed of c
 ;;nix               ; I hereby declare "nix geht mehr!"
 ;;ocaml             ; an objective camel
 (org
-+pretty
-+pandoc
-+present
-+roam2
-+jupyter)                                ; organize your plain life in plain text
+ +pretty
+ +pandoc
+ +present
+ +roam2
+ +jupyter)          ; organize your plain life in plain text
 ;;php               ; perl's insecure younger brother
 ;;plantuml          ; diagrams for confusing people more
 ;;purescript        ; javascript, but functional
-(python +lsp +pyright +conda +cython)           ; beautiful is better than ugly
+(python
+ +lsp
+ +pyright
+ +conda
+ +cython)           ; beautiful is better than ugly
 ;;qt                ; the 'cutest' gui framework ever
 ;;racket            ; a DSL for DSLs
 ;;raku              ; the artist formerly known as perl6
@@ -388,13 +395,13 @@ markdown          ; writing docs for people to ignore
 ;;rust              ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
 ;;scala             ; java, but good
 ;;(scheme +guile)   ; a fully conniving family of lisps
-(sh +lsp)                ; she sells {ba,z,fi}sh shells on the C xor
+(sh +lsp)           ; she sells {ba,z,fi}sh shells on the C xor
 ;;sml
 ;;solidity          ; do you need a blockchain? No.
 ;;swift             ; who asked for emoji variables?
 ;;terra             ; Earth and Moon in alignment for performance.
-web               ; the tubes
-yaml              ; JSON, but readable
+web                 ; the tubes
+(yaml +lsp)         ; JSON, but readable
 ;;zig               ; C, but simpler
 #+end_src
 
@@ -2078,6 +2085,7 @@ just makes the icons slightly better for unicode fonts
 (package! impatient-mode)
 (package! ox-gfm)
 (package! ztree)
+(package! magit-delta)
 ;; (unpin! mu4e)
 
 ;; To install SOME-PACKAGE from MELPA, ELPA or emacsmirror:
