--- a/config.org
+++ b/config.org
@@ -751,28 +751,28 @@ There are only a few things I do on the dashboard. So why not make them quicker 
 Doom doesn't always install everything I need so there are a few things to bring in
 #+name: run-setup
 #+begin_src emacs-lisp :tangle no
-(if (file-exists-p "setup.sh")
-    (if (string-empty-p (string-trim (with-temp-buffer (insert-file-contents "setup.sh") (buffer-string)) "#!/usr/bin/env bash"))
-        (message ";; Setup script is empty")
-      (message ";; Detected content in the setup script")
-      (pp-to-string
-       `(unless noninteractive
-          (defun +config-run-setup ()
-            (when (yes-or-no-p (format "%s The setup script has content. Check and run the script?"
-                                       (propertize "Warning!" 'face '(bold warning))))
-              (find-file (expand-file-name "setup.sh" doom-private-dir))
-              (when (yes-or-no-p "Would you like to run this script?")
-                (async-shell-command "./setup.sh"))))
-          (add-hook! 'doom-init-ui-hook
-            (run-at-time nil nil #'+config-run-setup)))))
-  (message ";; setup.sh did not exist during tangle. Tangle again.")
-  (pp-to-string
-   `(unless noninteractive
-      (add-hook! 'doom-init-ui-hook #'+literate-tangle-async-h))))
+;; (if (file-exists-p "setup.sh")
+;;     (if (string-empty-p (string-trim (with-temp-buffer (insert-file-contents "setup.sh") (buffer-string)) "#!/usr/bin/env bash"))
+;;         (message ";; Setup script is empty")
+;;       (message ";; Detected content in the setup script")
+;;       (pp-to-string
+;;        `(unless noninteractive
+;;           (defun +config-run-setup ()
+;;             (when (yes-or-no-p (format "%s The setup script has content. Check and run the script?"
+;;                                        (propertize "Warning!" 'face '(bold warning))))
+;;               (find-file (expand-file-name "setup.sh" doom-private-dir))
+;;               (when (yes-or-no-p "Would you like to run this script?")
+;;                 (async-shell-command "./setup.sh"))))
+;;           (add-hook! 'doom-init-ui-hook
+;;             (run-at-time nil nil #'+config-run-setup)))))
+;;   (message ";; setup.sh did not exist during tangle. Tangle again.")
+;;   (pp-to-string
+;;    `(unless noninteractive
+;;       (add-hook! 'doom-init-ui-hook #'+literate-tangle-async-h))))
 #+end_src
 
 #+begin_src emacs-lisp :noweb no-export
-<<run-setup()>>
+;; <<run-setup()>>
 #+end_src
 * Packages
 ** Loading instructions
