--- a/config.org
+++ b/config.org
@@ -65,21 +65,27 @@ Following in Tec's footsteps I somehow stumbled upon [[https://github.com/angryb
 
 #+begin_src emacs-lisp
 (setq-default
- delete-by-moving-to-trash t ; its rubbish bin not trash
- window-combination-resize t ; take all new space
- x-stretch-cursor t          ; deal with glyphs
- enable-local-variables t    ; I want to be able to use dir-locals
- global-auto-revert-mode t   ; reload files on disk
+ delete-by-moving-to-trash t                    ; its rubbish bin not trash
+ window-combination-resize t                    ; take all new space
+ x-stretch-cursor t                             ; deal with glyphs
+ ;; enable-local-variables t                    ; I want to be able to use dir-locals
+ ;; global-auto-revert-mode t                   ; reload files on disk
  )
 
 
 (setq
- undo-limit 2000000
- evil-want-fine-undo t          ; make undo limit bigger
- auto-save-default t            ; help with the b-s
- truncate-string-ellipsis "…"   ; is nicer
- compilation-scroll-output t    ; warnings annoy me
+ undo-limit 80000000
+ evil-want-fine-undo t                          ; make undo limit bigger
+ auto-save-default t                            ; help with the b-s
+ truncate-string-ellipsis "…"                   ; is nicer
+ password-cache-expiry nil
+ compilation-scroll-output t                    ; warnings annoy me
 )
+
+(unless (string-match-p "^Power N/A" (battery)) ; On laptops...
+  (display-battery-mode 1))                     ; it's nice to know how much power you have
+
+(global-subword-mode 1)                         ; Iterate through CamelCase words
 #+end_src
 
 ***  Frame sizing
@@ -91,6 +97,8 @@ make it easy to snap windows into the correct place
 (add-to-list 'default-frame-alist '(height . 24))
 (add-to-list 'default-frame-alist '(width . 80))
 #+end_src
+
+whilst this is not specifically needed for my setup on WM's, I do have to use normal desktop envs so this is useful.
 
 
 ***  Window Splitting
@@ -205,7 +213,7 @@ literate
 ;;helm              ; the *other* search engine for love and life
 ;;ido               ; the other *other* search engine...
 ;;(ivy
-;; +icons                 ; a search engine for love and life
+;; +icons           ; a search engine for love and life
 ;;)
 (vertico +icons)    ; search endine for the future
 #+end_src
@@ -216,55 +224,54 @@ Some are doom specific whilst others are nice quality of life improvements
 
 #+name: doom-ui
 #+begin_src emacs-lisp
-;;deft              ; notational velocity for Emacs
-doom              ; what makes DOOM look the way it does
-doom-dashboard    ; a nifty splash screen for Emacs
-doom-quit         ; DOOM quit-message prompts when you quit Emacs
-(emoji +unicode)  ; 🙂
-hl-todo           ; highlight TODO/FIXME/NOTE/DEPRECATED/HACK/REVIEW
-;;hydra
-;;indent-guides     ; highlighted indent columns
-(ligatures +extra)         ; ligatures and symbols to make your code pretty again
-minimap           ; show a map of the code on the side
-modeline          ; snazzy, Atom-inspired modeline, plus API
-nav-flash         ; blink cursor line after big motions
-;;neotree           ; a project drawer, like NERDTree for vim
-ophints           ; highlight the region an operation acts on
-(popup +defaults +all)   ; tame sudden yet inevitable temporary windows
-(tabs)             ; a tab bar for Emacs and prettyer tabs
-treemacs          ; a project drawer, like neotree but cooler
-unicode           ; extended unicode support for various languages
-vc-gutter         ; vcs diff in the fringe
-vi-tilde-fringe   ; fringe tildes to mark beyond EOB
-window-select    ; visually switch windows
-workspaces        ; tab emulation, persistence & separate workspaces
-zen               ; distraction-free coding or writing
-
+;;deft                 ; notational velocity for Emacs
+doom                   ; what makes DOOM look the way it does
+doom-dashboard         ; a nifty splash screen for Emacs
+doom-quit              ; DOOM quit-message prompts when you quit Emacs
+(emoji +unicode)       ; 🙂
+hl-todo                ; highlight TODO/FIXME/NOTE/DEPRECATED/HACK/
+;;hydra                ; quick documentation for related commands
+;;indent-guides        ; highlighted indent columns
+(ligatures +extra)     ; ligatures and symbols to make your code pretty again
+minimap                ; show a map of the code on the side
+modeline               ; snazzy, Atom-inspired modeline, plus API
+nav-flash              ; blink cursor line after big
+;;neotree              ; a project drawer, like NERDTree for vim
+ophints                ; highlight the region an operation acts on
+(popup +defaults +all) ; tame sudden yet inevitable temporary windows
+tabs                   ; a tab bar for Emacs and prettyer tabs
+treemacs               ; a project drawer, like neotree but cooler
+unicode                ; extended unicode support for various languages
+vc-gutter              ; vcs diff in the fringe
+vi-tilde-fringe        ; fringe tildes to mark beyond EOB
+window-select          ; visually switch windows
+workspaces             ; tab emulation, persistence & separate workspaces
+zen                    ; distraction-free coding or writing
 #+end_src
 
 **** Editor things
 
 #+name: doom-editor
 #+begin_src emacs-lisp
-(evil +everywhere); come to the dark side, we have cookies
-file-templates    ; auto-snippets for empty files
-fold              ; (nigh) universal code folding
-(format +onsave)  ; automated prettiness
-;;god               ; run Emacs commands without modifier keys
-;;lispy             ; vim for lisp, for people who don't like vim
-multiple-cursors  ; editing in many places at once
-;;objed             ; text object editing for the innocent
-;;parinfer          ; turn lisp into python, sort of
-;;rotate-text       ; cycle region at point between text candidates
-snippets          ; my elves. They type so I don't have to
-;;word-wrap         ; soft wrapping with language-aware indent
+(evil +everywhere)     ; come to the dark side, we have cookies
+file-templates         ; auto-snippets for empty files
+fold                   ; (nigh) universal code folding
+(format +onsave)       ; automated
+;;god                  ; run Emacs commands without modifier keys
+;;lispy                ; vim for lisp, for people who don't like vim
+multiple-cursors       ; editing in many places at once
+;;objed                ; text object editing for the innocent
+;;parinfer             ; turn lisp into python, sort of
+;;rotate-text          ; cycle region at point between text candidates
+snippets               ; my elves. They type so I don't have to
+;;word-wrap            ; soft wrapping with language-aware indent
 
 :emacs
-(dired +icons +ranger)            ; making dired pretty [functional]
-electric          ; smarter, keyword-based electric-indent
+(dired +icons +ranger) ; making dired pretty [functional]
+electric               ; smarter, keyword-based electric-indent
 (ibuffer +icons)       ; interactive buffer management
-undo              ; persistent, smarter undo for your inevitable mistakes
-vc                ; version-control and Emacs, sitting in a tree
+undo                   ; persistent, smarter undo for your inevitable mistakes
+vc                     ; version-control and Emacs, sitting in a tree
 #+end_src
 
 **** Terminals
@@ -275,8 +282,8 @@ the exception of maybe pdftools). As such having alternatives can be useful
 #+name: doom-term
 #+begin_src emacs-lisp
 eshell            ; the elisp shell that works everywhere
-;;shell             ; simple shell REPL for Emacs
-;;term              ; basic terminal emulator for Emacs
+;;shell           ; simple shell REPL for Emacs
+;;term            ; basic terminal emulator for Emacs
 vterm             ; the best terminal emulation in Emacs
 #+end_src
 
@@ -299,32 +306,33 @@ despite the name herein lies some of the things that make emacs worth using.
 #+name: doom-tools
 #+begin_src emacs-lisp
 ansible
-;;biblio            ; Writes a PhD for you (citation needed)
-(debugger +lsp)         ; FIXME stepping through code, to help you add bugs
-;;direnv
-;;docker
-editorconfig      ; let someone else argue about tabs vs spaces
-;;ein               ; tame Jupyter notebooks with emacs
-(eval +overlay)     ; run code, run (also, repls)
-;;gist              ; interacting with github gists
-lookup              ; navigate your code and its documentation
-lsp               ; M-x vscode
-(magit +forge)             ; a git porcelain for Emacs
-make              ; run make tasks from Emacs
-;;pass              ; password manager for nerds
-pdf               ; pdf enhancements
-;;prodigy           ; FIXME managing external services & code builders
-rgb               ; creating color strings
-;;taskrunner        ; taskrunner for all your projects
-;;terraform         ; infrastructure as code
-;;tmux              ; an API for interacting with tmux
-tree-sitter       ; syntax and parsing, sitting in a tree...
-upload            ; map local to remote projects via ssh/ftp
+;;biblio        ; Writes a PhD for you (citation needed)
+(debugger +lsp) ; FIXME stepping through code, to help you add bugs
+;;direnv        ; be direct about your environment
+;;docker        ; port everything to containers
+editorconfig    ; let someone else argue about tabs vs spaces
+;;ein           ; tame Jupyter notebooks with emacs
+(eval +overlay) ; run code, run (also, repls)
+;;gist          ; interacting with github gists
+lookup          ; navigate your code and its documentation
+lsp             ; M-x vscode
+;;macos         ; MacOS-specific commands
+(magit +forge)  ; a git porcelain for Emacs
+make            ; run make tasks from Emacs
+;;pass          ; password manager for nerds
+pdf             ; pdf enhancements
+;;prodigy       ; FIXME managing external services & code builders
+rgb             ; creating color strings
+;;taskrunner    ; taskrunner for all your projects
+;;terraform     ; infrastructure as code
+;;tmux          ; an API for interacting with tmux
+tree-sitter     ; syntax and parsing, sitting in a tree...
+upload          ; map local to remote projects via ssh/ftp
 #+end_src
 #+name: doom-os
 #+begin_src emacs-lisp
 (:if IS-MAC macos)  ; improve compatibility with macOS
-tty               ; improve the terminal Emacs experience
+tty                 ; improve the terminal Emacs experience
 #+end_src
 
 
@@ -350,7 +358,7 @@ emacs-lisp          ; drown in parentheses
 ;;ess               ; emacs speaks statistics
 ;;factor
 ;;faust             ; dsp, but you get to keep your soul
-fortran             ; in FORTRAN, GOD is REAL (unless declared INTEGER)
+(fortran +lsp)      ; in FORTRAN, GOD is REAL (unless declared INTEGER)
 ;;fsharp            ; ML stands for Microsoft's Language
 ;;fstar             ; (dependent) types and (monadic) effects and Z3
 ;;gdscript          ; the language you waited for
@@ -359,7 +367,9 @@ fortran             ; in FORTRAN, GOD is REAL (unless declared INTEGER)
 ;;(haskell +lsp)    ; a language that's lazier than I am
 ;;hy                ; readability of scheme w/ speed of python
 ;;idris             ; a language you can depend on
-json                ; At least it ain't XML
+(json
+ +lsp
+ +tree-sitter)      ; At least it ain't XML
 (java +lsp)         ; the poster child for carpal tunnel syndrome
 (javascript +lsp)   ; all(hope(abandon(ye(who(enter(here))))))
 (julia +lsp)        ; a better, faster MATLAB
@@ -420,9 +430,9 @@ A constant work in progress. But trying to understand it does teach you a bunch.
 there are other things to consider as well
 #+name: doom-app
 #+begin_src emacs-lisp
-;;calendar
-;;emms
-everywhere        ; *leave* Emacs!? You must be joking
+;;calendar          ; A dated approach to timetabling
+;;emms              ; Multimedia in Emacs is music to my ears
+everywhere          ; *leave* Emacs!? You must be joking
 ;;irc               ; how neckbeards socialize
 ;;(rss +org)        ; emacs as an RSS reader
 ;;twitter           ; twitter client https://twitter.com/vnought
